Bug 123439 - Crash wrt PointerStyle fails when moving cursor over toolbar
Summary: Crash wrt PointerStyle fails when moving cursor over toolbar
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-02-13 15:37 UTC by Michael Weghorn
Modified: 2019-02-14 14:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB backtrace (6.27 KB, text/plain)
2019-02-13 15:41 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2019-02-13 15:37:21 UTC
With a debug build LibreOffice master as of commit f637b79e3517235883a65bd33a303642fb17fdee:

1) start LibreOffice Writer
2) move cursor over toolbar

Result: LibreOffice crashes and shows the following output on command line:

soffice.bin: /home/michael.weghorn/development/libreoffice/include/o3tl/enumarray.hxx:66: V& o3tl::enumarray<E, V>::operator[](E) [with E = PointerStyle; V = _GdkCursor*]: Assertion `index>=static_cast<E>(0) && index<=E::LAST' failed.

Explicitly reproduced with gtk3 and kde5 VCL plugin.
Comment 1 Michael Weghorn 2019-02-13 15:40:45 UTC
The problem disappears when reverting the following commit:

commit a2b687a88feedfae0087bfc999b3cf49b9d3d24b
Author: Noel Grandin <noel.grandin@collabora.co.uk>
Date:   Tue Feb 12 10:12:03 2019 +0200

    Pointer is pointless
    
    since it is just a wrapper around PointerStyle
    
    Change-Id: I51f065e0d4ad8bd91f5c84c5819048c720a19267
    Reviewed-on: https://gerrit.libreoffice.org/67711
    Tested-by: Jenkins
    Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>

Adding Cc: to Noel Grandin
Comment 2 Michael Weghorn 2019-02-13 15:41:23 UTC
Created attachment 149273 [details]
GDB backtrace
Comment 3 Katarina Behrens (Inactive) 2019-02-13 17:59:01 UTC
Yep
Comment 4 Xisco Faulí 2019-02-14 09:38:02 UTC
Actually, it's a crash.
Reproduced with the bibisect-linux64-6.3. Indeed, it points to a2b687a88feedfae0087bfc999b3cf49b9d3d24b
Comment 5 Commit Notification 2019-02-14 10:42:10 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/eaf3c9e5d1090ebadecccf4e20b6b1f7fa53af26%5E%21

tdf#123439 Assert wrt PointerStyle fails when moving cursor over toolbar

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2019-02-14 14:36:07 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 6c1588fd22baa0f315e38ecd22591cf13b4b9384
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Noel, Thanks for fixing this!