tdf#123439 Assert wrt PointerStyle fails when moving cursor over toolbar

regression from
    commit a2b687a88feedfae0087bfc999b3cf49b9d3d24b
    Date:   Tue Feb 12 10:12:03 2019 +0200
    Pointer is pointless

Change-Id: I727e68c71f4ebacb9adae83f1f9b43ce999d5374