sd/source/ui/func/fudraw.cxx
@@ -75,6 +75,8 @@ namespace sd {
 FuDraw::FuDraw(ViewShell* pViewSh, ::sd::Window* pWin, ::sd::View* pView,
                SdDrawDocument* pDoc, SfxRequest& rReq)
     : FuPoor(pViewSh, pWin, pView, pDoc, rReq)
+    , aNewPointer(PointerStyle::Arrow)
+    , aOldPointer(PointerStyle::Arrow)
     , bMBDown(false)
     , bDragHelpLine(false)
     , nHelpLine(0)
