sd/source/ui/func/fudspord.cxx
@@ -34,6 +34,7 @@ namespace sd {
 
 FuDisplayOrder::FuDisplayOrder( ViewShell* pViewSh, ::sd::Window* pWin, ::sd::View* pView, SdDrawDocument* pDoc, SfxRequest& rReq)
 : FuPoor(pViewSh, pWin, pView, pDoc, rReq)
+, maPtr(PointerStyle::Arrow)
 , mpRefObj(nullptr)
 {
 }
